--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-xs-3" id="left-col">
-			do stuff here
+				<div id="room-container">
+				this will be deleted
+					<div class="row">
+						<div class="col-lg-12 room-selector-row">
+
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="col-lg-9 col-md-9 col-xs-9" id="right-col">
 			and other stuff here
